add deprecation errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -357,7 +357,8 @@
       ["Clients", "/errors/clients"],
       ["Comms", "/errors/comms"],
       ["Cookie", "/errors/cookie"],
-      ["DB", "/errors/db"]
+      ["DB", "/errors/db"],
+      ["Deprecation", "/errors/deprecation"]
     ]
   ],
     [
