adding domains errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -358,7 +358,8 @@
       ["Comms", "/errors/comms"],
       ["Cookie", "/errors/cookie"],
       ["DB", "/errors/db"],
-      ["Deprecation", "/errors/deprecation"]
+      ["Deprecation", "/errors/deprecation"],
+      ["Domains", "/errors/domains"]
     ]
   ],
     [
