add entitlements errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -359,7 +359,8 @@
       ["Cookie", "/errors/cookie"],
       ["DB", "/errors/db"],
       ["Deprecation", "/errors/deprecation"],
-      ["Domains", "/errors/domains"]
+      ["Domains", "/errors/domains"],
+      ["Entitlements", "/errors/entitlements"]
     ]
   ],
     [
