Add features errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -360,7 +360,8 @@
       ["DB", "/errors/db"],
       ["Deprecation", "/errors/deprecation"],
       ["Domains", "/errors/domains"],
-      ["Entitlements", "/errors/entitlements"]
+      ["Entitlements", "/errors/entitlements"],
+      ["Features", "/errors/features"]
     ]
   ],
     [
