--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,8 +30,8 @@
       "root": "concepts"
     },
     [
-      ["How Clerk Works", "/concepts/how-clerk-works"],
-      ["Client Handshake", "/concepts/client-handshake"]
+      ["How Clerk works", "/concepts/how-clerk-works"],
+      ["Client handshake", "/concepts/client-handshake"]
     ]
   ],
   [
