update sidenav icon; add meta desc for how clerk works

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -26,7 +26,7 @@
   [
     {
       "title": "Concepts",
-      "icon": "lightning-bolt",
+      "icon": "lightbulb",
       "root": "concepts"
     },
     [
