--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,7 +30,8 @@
       "root": "guides"
     },
     [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
+      ["Avoid personal account and force organizations in your app", "/guides/force-organization"]
     ]
   ],
   "---",
