add long term support policy

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -372,6 +372,7 @@
       "root": "upgrade-guides"
     },
     [
+      ["Long Term Support Policy", "/upgrade-guides/long-term-support"],
       ["API Key Changes", "/upgrade-guides/api-keys"],
       ["URL-based session syncing", "/upgrade-guides/url-based-session-syncing"],
       ["Progressive Sign up", "/upgrade-guides/progressive-sign-up"],
