DOCS-338 add linting (eslint, eslint-mdx, remark, vale) (#563)
Co-authored-by: Lennart <lekoarts@gmail.com>

--- a/.remarkrc
+++ b/.remarkrc
@@ -3,6 +3,13 @@
     "preset-lint-consistent",
     "preset-lint-markdown-style-guide",
     "preset-lint-recommended",
-    "preset-prettier"
+    "frontmatter",
+    ["remark-lint-frontmatter-schema", {
+      "schemas": {
+        "./schemas/docs.schema.yml": [
+          "./docs/**/*.mdx"
+        ]
+      }
+    }]
   ]
 }
