--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -31,7 +31,7 @@
     },
     [
       ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
-      ["Avoid personal account and force organizations in your app", "/guides/force-organizations"]
+      ["Hide personal accounts and force organizations", "/guides/force-organizations"]
     ]
   ],
   "---",
