add instructions on how to find the publishable key

--- a/.remarkrc
+++ b/.remarkrc
@@ -4,6 +4,7 @@
     "preset-lint-markdown-style-guide",
     "preset-lint-recommended",
     "frontmatter",
+    ["remark-lint-maximum-line-length", false],
     ["remark-lint-frontmatter-schema", {
       "schemas": {
         "./schemas/docs.schema.yml": [
