--- a/.remarkrc
+++ b/.remarkrc
@@ -4,6 +4,7 @@
     "preset-lint-markdown-style-guide",
     "preset-lint-recommended",
     "frontmatter",
+    ["remark-lint-ordered-list-marker-value", "off"],
     ["remark-lint-frontmatter-schema", {
       "schemas": {
         "./schemas/docs.schema.yml": [
