--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -420,7 +420,7 @@
   ],
   [
     {
-      "title": "Security",
+      "title": "Security & Privacy",
       "icon": "lock-closed",
       "root": "security"
     },
@@ -434,6 +434,7 @@
       ["CSRF protection", "/security/csrf-protection"],
       ["Fixation protection", "/security/fixation-protection"],
       ["Password protection and rules", "/security/password-protection"],
+      ["Clerk Telemetry", "/telemetry"],
       "# Protect accounts from attacks",
       ["Brute force attacks and locking user accounts","/security/user-lock-guide"],
       ["Customize max login attempts and duration of of user lockout", "/security/customize-user-lockout"],
