--- a/.remarkrc
+++ b/.remarkrc
@@ -4,8 +4,11 @@
     "preset-lint-markdown-style-guide",
     "preset-lint-recommended",
     "frontmatter",
-    ["remark-lint-ordered-list-marker-value", "off"],
+    ["remark-lint-ordered-list-marker-value", "ordered"],
     ["remark-lint-maximum-line-length", false],
+    ["remark-lint-list-item-indent", false],
+    ["remark-lint-final-newline", false],
+    ["remark-lint-list-item-bullet-indent", false],
     ["remark-lint-frontmatter-schema", {
       "schemas": {
         "./schemas/docs.schema.yml": [
