magic link changed to email link

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -274,7 +274,7 @@
       ["useSignUp() and useSignIn()", "/custom-flows/use-sign-up"],
       ["Email & Password", "/custom-flows/email-password"],
       ["Email / SMS OTP", "/custom-flows/email-sms-otp"],
-      ["Magic links", "/custom-flows/magic-links"],
+      ["Email links", "/custom-flows/email-links"],
       ["Multifactor", "/custom-flows/mfa"],
       ["OAuth Connections", "/custom-flows/oauth-connections"],
       ["SAML Connections", "/custom-flows/saml-connections"],
@@ -282,7 +282,7 @@
       ["Sign out", "/custom-flows/sign-out"],
       ["User Impersonation", "/custom-flows/user-impersonation"],
       ["Invitations", "/custom-flows/invitations"],
-      ["Embedded Magic Links", "/custom-flows/embedded-magic-links"],
+      ["Embedded Email Links", "/custom-flows/embedded-email-links"],
       [
         "Multi-session applications",
         "/custom-flows/multi-session-applications"
@@ -606,7 +606,7 @@
           ["SignUpRedirectOptions", "/references/javascript/types/sign-up-redirect-options"],
           ["SignInInitialValues", "/references/javascript/types/sign-in-initial-values"],
           ["SignUpInitialValues", "/references/javascript/types/sign-up-initial-values"],
-          ["MagicLinkError", "/references/javascript/types/magic-link-error"],
+          ["EmailLinkError", "/references/javascript/types/email-link-error"],
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
           ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
