feat: Guide for forcing organizations (#591)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,7 +30,8 @@
       "root": "guides"
     },
     [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
+      ["Hide Personal Accounts and force organizations", "/guides/force-organizations"]
     ]
   ],
   "---",
