--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -749,6 +749,17 @@
       ["Hono", "https://github.com/honojs/middleware/tree/main/packages/clerk-auth"]
     ]
   ],
+  [
+    {
+      "title": "C#",
+      "icon": "csharp",
+      "root": "references/csharp",
+      "tag": "Community"
+    },
+    [
+      ["C#", "https://github.com/Hawxy/Clerk.Net"]
+    ]
+  ],
   "# API References",
   [
     { "title": "Backend SDK", "icon": "", "root": "/references/backend" },
