--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -611,7 +611,7 @@
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
           ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
-          ["PaginatedResponse", "/references/javascript/types/paginated-response"],
+          ["ClerkPaginatedResponse", "/references/javascript/types/clerk-paginated-response"],
           ["CustomPage", "/references/javascript/types/custom-page"]
         ]
       ]
@@ -776,8 +776,8 @@
             "/references/backend/organization/get-organization-membership-list"
           ],
           [
-            "getPendingOrganizationInvitationList()",
-            "/references/backend/organization/get-pending-organization-invitation-list"
+            "getOrganizationInvitationList()",
+            "/references/backend/organization/get-organization-invitation-list"
           ],
           [
             "createOrganization()",
