Add Inngest guide

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -306,7 +306,9 @@
       ["Nhost", "/integrations/databases/nhost"],
       ["Supabase", "/integrations/databases/supabase"],
       "# Analytics",
-      ["Google Analytics", "/integrations/analytics/google-analytics"]
+      ["Google Analytics", "/integrations/analytics/google-analytics"],
+      "# Webhooks",
+      ["Inngest", "/integrations/webhooks/inngest"]
     ]
   ],
   [
@@ -401,7 +403,7 @@
       [
         "Vulnerability disclosure policy",
         "/security/vulnerability-disclosure-policy"
-      ],      
+      ],
       ["XSS leak protection", "/security/xss-leak-protection"],
       ["CSRF protection", "/security/csrf-protection"],
       ["Fixation protection", "/security/fixation-protection"],
