--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -415,8 +415,8 @@
       "# Guides",
       ["Read session and user data", "/references/nextjs/read-session-data"],
       ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"],
+      ["Route protection", "/references/nextjs/route-protection"],
       ["Integrate Clerk into your app with tRPC", "/references/nextjs/trpc"],
-      ["Use Clerk with Next.js 12 and older", "/references/nextjs/usage-with-older-versions"],
       "# App Router References",
       ["auth()", "/references/nextjs/auth"],
       ["currentUser()", "/references/nextjs/current-user"],
@@ -426,9 +426,11 @@
       ["getAuth()", "/references/nextjs/get-auth"],
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
       "# Other References",
+      ["clerkMiddleware()", "/references/nextjs/clerk-middleware"],
       ["Authentication Object", "/references/nextjs/authentication-object"],
-      ["authMiddleware()", "/references/nextjs/auth-middleware"],
       "# Deprecated",
+      ["authMiddleware()", "/references/nextjs/auth-middleware"],
+      ["Use Clerk with Next.js 12 and older", "/references/nextjs/usage-with-older-versions"],
       ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
   ],
