--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -885,6 +885,6 @@
       ]
     ]
   ],
-  ["Backend API", "https://clerk.com/docs/reference/backend-api"],
-  ["Frontend API", "https://clerk.com/docs/reference/frontend-api"]
+  ["Backend API", "https://clerk-bapi.redoc.ly/"],
+  ["Frontend API", "https://clerk-fapi.redoc.ly/"]
 ]
