add back proxied redocly links

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -885,6 +885,6 @@
       ]
     ]
   ],
-  ["Backend API", "https://clerk-bapi.redoc.ly/"],
-  ["Frontend API", "https://clerk-fapi.redoc.ly/"]
+  ["Backend API", "/reference/backend-api"],
+  ["Frontend API", "/reference/frontend-api/"]
 ]
