--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -75,7 +75,7 @@
         "/guides/force-organizations"
       ],
       [
-        "Migrating from NextAuth",
+        "Migrating from NextAuth.js",
         "/guides/nextauth-migration"
       ]
     ]
