update org-switcher guide WIP

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -131,7 +131,7 @@
       ["Inviting users", "/organizations/inviting-users"],
       ["Managing roles", "/organizations/managing-roles"],
       ["Viewing memberships", "/organizations/viewing-memberships"],
-      ["Managing multiple organizations", "/organizations/multiple-orgs"],
+      ["Create a custom organization switcher", "/organizations/custom-organization-switcher"],
       ["Verified domains", "/organizations/verified-domains"]
     ]
   ],
