Added section, moved 'add oauth', updated Oauth main page

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -285,22 +285,25 @@
     [
       ["Overview", "/custom-flows/overview"],
       ["useSignUp() and useSignIn()", "/custom-flows/use-sign-up"],
+      ["Error handling", "/custom-flows/error-handling"],
+      "# Authenticaiton",
       ["Email & Password", "/custom-flows/email-password"],
       ["Email / SMS OTP", "/custom-flows/email-sms-otp"],
       ["Email links", "/custom-flows/email-links"],
-      ["Multifactor", "/custom-flows/mfa"],
       ["OAuth Connections", "/custom-flows/oauth-connections"],
       ["SAML Connections", "/custom-flows/saml-connections"],
-      ["Forgot Password", "/custom-flows/forgot-password"],
       ["Sign out", "/custom-flows/sign-out"],
+      "# Account Updates and Chanses", 
+      ["Multifactor", "/custom-flows/mfa"],
+      ["Forgot Password", "/custom-flows/forgot-password"],
+      ["Add OAuth Connection", "/custom-flows/add-oauth-connection"],
       ["User Impersonation", "/custom-flows/user-impersonation"],
       ["Invitations", "/custom-flows/invitations"],
       ["Embedded Email Links", "/custom-flows/embedded-email-links"],
       [
         "Multi-session applications",
         "/custom-flows/multi-session-applications"
-      ],
-      ["Error handling", "/custom-flows/error-handling"]
+      ]
     ]
   ],
   "---",
