add redirect url pages to manifest (sidenav)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -873,6 +873,27 @@
             "/references/backend/invitations/revoke-invitation"
           ]
         ]
+      ],
+      [
+        { "title": "Redirect Urls" },
+        [
+          [
+            "getRedirectUrl()",
+            "/references/backend/redirect-urls/get-redirect-url"
+          ],
+          [
+            "getRedirectUrlList()",
+            "/references/backend/redirect-urls/get-redirect-url-list"
+          ],
+          [
+            "createRedirectUrl()",
+            "/references/backend/redirect-urls/create-redirect-url"
+          ],
+          [
+            "deleteRedirectUrl()",
+            "/references/backend/redirect-urls/delete-redirect-url"
+          ]
+        ]
       ]
     ]
   ],
