add email address subapi

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -894,6 +894,27 @@
             "/references/backend/redirect-urls/delete-redirect-url"
           ]
         ]
+      ],
+      [
+        { "title": "Email addresses" },
+        [
+          [
+            "getEmailAddress()",
+            "/references/backend/email-addresses/get-email-address"
+          ],
+          [
+            "createEmailAddress()",
+            "/references/backend/email-addresses/create-email-address"
+          ],
+          [
+            "updateEmailAddress()",
+            "/references/backend/email-addresses/update-email-address"
+          ],
+          [
+            "deleteEmailAddress()",
+            "/references/backend/email-addresses/delete-email-address"
+          ]
+        ]
       ]
     ]
   ],
