add phone numbers subapi

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -915,6 +915,27 @@
             "/references/backend/email-addresses/delete-email-address"
           ]
         ]
+      ],
+      [
+        { "title": "Phone numbers" },
+        [
+          [
+            "getPhoneNumber()",
+            "/references/backend/phone-numbers/get-phone-number"
+          ],
+          [
+            "createPhoneNumber()",
+            "/references/backend/phone-numbers/create-phone-number"
+          ],
+          [
+            "updatePhoneNumber()",
+            "/references/backend/phone-numbers/update-phone-number"
+          ],
+          [
+            "deletePhoneNumber()",
+            "/references/backend/phone-numbers/delete-phone-number"
+          ]
+        ]
       ]
     ]
   ],
