document missing methods: updateUserMetadata, getUserOauthAccessToken, disableUserMFA, and verifyPassword

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -755,9 +755,13 @@
           ["getUserList()", "/references/backend/user/get-user-list"],
           ["getUser()", "/references/backend/user/get-user"],
           ["getCount()", "/references/backend/user/get-count"],
+          ["getUserOAuthAccessToken()", "/references/backend/user/get-user-oauth-access-token"],
           ["createUser()", "/references/backend/user/create-user"],
+          ["verifyPassword()", "/references/backend/user/verify-password"],
           ["updateUser()", "/references/backend/user/update-user"],
-          ["deleteUser()", "/references/backend/user/delete-user"]
+          ["updateUserMetadata()", "/references/backend/user/update-user-metadata"],
+          ["deleteUser()", "/references/backend/user/delete-user"],
+          ["disableUserMFA()", "/references/backend/user/disable-user-mfa"]
         ]
       ],
       [
