add paginatedresourceresponse to manifest (sidenav)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -940,6 +940,15 @@
             "/references/backend/phone-numbers/delete-phone-number"
           ]
         ]
+      ],
+      [
+        { "title": "Types" },
+        [
+          [
+            "PaginatedResourceResponse",
+            "/references/backend/types/paginated-resource-response"
+          ]
+        ]
       ]
     ]
   ],
