add user/get-organization-membership-list to manifest (sidenav)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -755,6 +755,7 @@
           ["getUserList()", "/references/backend/user/get-user-list"],
           ["getUser()", "/references/backend/user/get-user"],
           ["getCount()", "/references/backend/user/get-count"],
+          ["getOrganizationMembershipList()", "/references/backend/user/get-organization-membership-list"],
           ["getUserOAuthAccessToken()", "/references/backend/user/get-user-oauth-access-token"],
           ["createUser()", "/references/backend/user/create-user"],
           ["verifyPassword()", "/references/backend/user/verify-password"],
