reset and pare sidebar back

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,9 +1,9 @@
 [
   [{ "title": "Home", "icon": "home" }, "/"],
-  "# Learning",
+
   [
     {
-      "title": "Quickstarts",
+      "title": "Getting Started",
       "icon": "lightning-bolt",
       "root": "quickstarts"
     },
@@ -30,391 +30,85 @@
       "root": "guides"
     },
     [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"],
-      ["Hide Personal Accounts and force organizations", "/guides/force-organizations"]
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
+    ]
+  ],
+  [
+    {
+      "title": "API Reference",
+      "icon": "book-open",
+      "root": "guides"
+    },
+    [
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
+      
+    ]
+  ],
+  [
+    {
+      "title": "UI Components",
+      "icon": "book-open",
+      "root": "guides"
+    },
+    [
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
+      
     ]
   ],
   "---",
+  "# Core Concepts",
   [
     {
-      "title": "Sign Up & Sign In",
-      "icon": "sign-in",
-      "root": "authentication"
+      "title": "Integrating Clerk",
+      "root": "guides"
     },
     [
-      ["Overview", "/authentication/overview"],
-      "# Configuration",
-      ["Sign-up options", "/authentication/configuration/sign-up-options"],
-      ["Sign-in options", "/authentication/configuration/sign-in-options"],
-      ["Session options", "/authentication/configuration/session-options"],
-      ["Email & SMS options", "/authentication/configuration/email-options"],
-      ["Restrictions", "/authentication/configuration/restrictions"],
-      ["SAML at Clerk", "/authentication/saml-at-clerk"],
-      "# Prebuilt Components",
-      ["<SignIn />", "https://clerk.com/docs/components/authentication/sign-in"],
-      ["<SignUp />", "https://clerk.com/docs/components/authentication/sign-up"],
-      "# Social Connections",
-      ["Overview", "/authentication/social-connections/overview"],
-      [
-        "Social connections (OAuth)",
-        "/authentication/social-connections/oauth"
-      ],
-      ["Account linking", "/authentication/social-connections/account-linking"],
-      ["Google", "/authentication/social-connections/google"],
-      ["Facebook", "/authentication/social-connections/facebook"],
-      ["Microsoft", "/authentication/social-connections/microsoft"],
-      [
-        { "title": "See all" },
-        [
-          ["Apple", "/authentication/social-connections/apple"],
-          ["Atlassian", "/authentication/social-connections/atlassian"],
-          ["Bitbucket", "/authentication/social-connections/bitbucket"],
-          ["Box", "/authentication/social-connections/box"],
-          ["Coinbase", "/authentication/social-connections/coinbase"],
-          ["Discord", "/authentication/social-connections/discord"],
-          ["Dropbox", "/authentication/social-connections/dropbox"],
-          ["GitHub", "/authentication/social-connections/github"],
-          ["GitLab", "/authentication/social-connections/gitlab"],
-          ["Google", "/authentication/social-connections/google"],
-          ["HubSpot", "/authentication/social-connections/hubspot"],
-          ["Line", "/authentication/social-connections/line"],
-          ["Linear", "/authentication/social-connections/linear"],
-          ["LinkedIn (Deprecated)", "/authentication/social-connections/linkedin"],
-          ["LinkedIn", "/authentication/social-connections/linkedin-oidc"],
-          ["Notion", "/authentication/social-connections/notion"],
-          ["Slack", "/authentication/social-connections/slack"],
-          ["Spotify", "/authentication/social-connections/spotify"],
-          ["TikTok", "/authentication/social-connections/tiktok"],
-          ["Twitter v1", "/authentication/social-connections/twitter"],
-          ["X/Twitter v2", "/authentication/social-connections/x-twitter"],
-          ["Xero", "/authentication/social-connections/xero/"]
-        ]
-      ]
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
     ]
   ],
   [
     {
       "title": "Users",
-      "icon": "user",
-      "root": "users"
+      "root": "guides"
     },
     [
-      ["Overview", "/users/overview"],
-      ["Metadata", "/users/metadata"],
-      ["Deleting users", "/users/deleting-users"],
-      "# Prebuilt Components",
-      ["<UserButton />", "https://clerk.com/docs/components/user/user-button"],
-      ["<UserProfile />", "https://clerk.com/docs/components/user/user-profile"],
-      "# Guides",
-      ["Sync Clerk data to your backend with webhooks", "/users/sync-data"],
-      ["Web3 authentication", "/users/web3"]
-    ]
-  ],
-  [
-    { "title": "Organizations, Roles, and Permissions", "icon": "user-group", "root": "organizations" },
-    [
-      ["Overview", "/organizations/overview"],
-      ["Roles and permissions", "/organizations/roles-permissions"],
-      "# Prebuilt Components",
-      ["<CreateOrganization />", "https://clerk.com/docs/components/organization/create-organization"],
-      ["<OrganizationProfile />", "https://clerk.com/docs/components/organization/organization-profile"],
-      ["<OrganizationSwitcher />", "https://clerk.com/docs/components/organization/organization-switcher"],
-      ["<OrganizationList />", "https://clerk.com/docs/components/organization/organization-list"],
-      ["<Protect>", "https://clerk.com/docs/components/protect"],
-      "# Guides",
-      ["Create roles and assign permissions", "/organizations/create-roles-permissions"],
-      ["Verify the active user’s permissions", "/organizations/verify-user-permissions"],
-      ["Reassign the creator role", "/organizations/creator-role"],
-      "# Building custom flows",
-      ["Using metadata", "/organizations/metadata"],
-      ["Creating organizations", "/organizations/creating-organizations"],
-      ["Updating organizations", "/organizations/updating-organizations"],
-      ["Inviting users", "/organizations/inviting-users"],
-      ["Managing roles", "/organizations/managing-roles"],
-      ["Viewing memberships", "/organizations/viewing-memberships"],
-      ["Managing multiple organizations", "/organizations/multiple-orgs"],
-      ["Verified domains", "/organizations/verified-domains"]
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
     ]
   ],
   [
     {
-      "title": "Backend Requests",
-      "icon": "request-authentication",
-      "root": "backend-requests"
+      "title": "Organizations",
+      "root": "guides"
     },
     [
-      ["Overview", "/backend-requests/overview"],
-      "# Making requests",
-      ["Same-Origin Requests", "/backend-requests/making/same-origin"],
-      ["Cross-Origin Requests", "/backend-requests/making/cross-origin"],
-      [
-        "Session token customization",
-        "/backend-requests/making/custom-session-token"
-      ],
-      ["JWT Templates", "/backend-requests/making/jwt-templates"],
-      "# Handling requests",
-      ["Node.js & Express", "/backend-requests/handling/nodejs"],
-      ["Go", "/backend-requests/handling/go"],
-      ["Gatsby", "/backend-requests/handling/gatsby"],
-      ["Ruby / Rails", "/backend-requests/handling/ruby-rails"],
-      ["Manual JWT Verification", "/backend-requests/handling/manual-jwt"],
-      "# Resources",
-      ["Session tokens", "/backend-requests/resources/session-tokens"],
-      ["Rate limits", "/backend-requests/resources/rate-limits"]
-    ]
-  ],
-  "---",
-  [
-    {
-      "title": "Account Portal",
-      "icon": "cloud",
-      "root": "account-portal"
-    },
-    [
-      ["Overview", "/account-portal/overview"],
-      ["Getting started", "/account-portal/getting-started"],
-
-      "# Advanced Usage",
-      ["Custom redirects", "/account-portal/custom-redirects"],
-      ["Direct links", "/account-portal/direct-links"],
-      ["User & Organization Pages","/account-portal/user-profile-org-profile"],
-      ["Disable Account Portal","/account-portal/disable-account-portal"]
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
     ]
   ],
   [
     {
-      "title": "Component Reference",
-      "icon": "rectangle-group",
-      "root": "components"
+      "title": "Session Management",
+      "root": "guides"
     },
     [
-      ["Overview", "/components/overview"],
-      ["<ClerkProvider>", "/components/clerk-provider"],
-      "# Authentication Components",
-      ["<SignIn />", "/components/authentication/sign-in"],
-      ["<SignUp />", "/components/authentication/sign-up"],
-
-      "# User Components",
-      ["<UserButton />", "/components/user/user-button"],
-      ["<UserProfile />", "/components/user/user-profile"],
-
-      "# Organization Components",
-      ["<CreateOrganization />", "/components/organization/create-organization"],
-      [
-        "<OrganizationProfile />",
-        "/components/organization/organization-profile"
-      ],
-      [
-        "<OrganizationSwitcher />",
-        "/components/organization/organization-switcher"
-      ],
-      [
-        "<OrganizationList />",
-        "/components/organization/organization-list"
-      ],
-
-      "# Customization",
-      [
-        { "title": "Appearance prop" },
-        [
-          ["Overview", "/components/customization/overview"],
-          ["Layout", "/components/customization/layout"],
-          ["Themes", "/components/customization/themes"],
-          ["Variables", "/components/customization/variables"]
-        ]
-      ],
-      ["Localization prop (i18n)", "/components/customization/localization"],
-      [
-        { "title": "Custom Pages" },
-        [
-          ["<UserProfile />", "/components/customization/user-profile"],
-          ["<OrganizationProfile />", "/components/customization/organization-profile"]
-        ]
-      ],
-      "# Control Components",
-      [
-        "<AuthenticateWithRedirectCallback />",
-        "/components/control/authenticate-with-callback"
-      ],
-      ["<ClerkLoaded>", "/components/control/clerk-loaded"],
-      ["<ClerkLoading>", "/components/control/clerk-loading"],
-      ["<Protect>", "/components/protect"],
-      ["<MultisessionAppSupport>", "/components/control/multi-session"],
-      ["<RedirectToSignIn />", "/components/control/redirect-to-signin"],
-      ["<RedirectToSignUp />", "/components/control/redirect-to-signup"],
-      [
-        "<RedirectToUserProfile />",
-        "/components/control/redirect-to-userprofile"
-      ],
-      [
-        "<RedirectToOrganizationProfile />",
-        "/components/control/redirect-to-organizationprofile"
-      ],
-      [
-        "<RedirectToCreateOrganization />",
-        "/components/control/redirect-to-createorganization"
-      ],
-      ["<SignedIn>", "/components/control/signed-in"],
-      ["<SignedOut>", "/components/control/signed-out"],
-      "# Unstyled Components",
-      ["<SignInButton>", "/components/unstyled/sign-in-button"],
-      [
-        "<SignInWithMetamaskButton>",
-        "/components/unstyled/sign-in-with-metamask"
-      ],
-      ["<SignUpButton>", "/components/unstyled/sign-up-button"],
-      ["<SignOutButton>", "/components/unstyled/sign-out-button"]
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
     ]
   ],
   [
     {
-      "title": "Custom Flows",
-      "icon": "wrench-screwdriver",
-      "root": "custom-flows"
+      "title": "Client Handshake",
+      "root": "guides"
     },
     [
-      ["Overview", "/custom-flows/overview"],
-      ["useSignUp() and useSignIn()", "/custom-flows/use-sign-up"],
-      ["Email & Password", "/custom-flows/email-password"],
-      ["Email / SMS OTP", "/custom-flows/email-sms-otp"],
-      ["Magic links", "/custom-flows/magic-links"],
-      ["Multifactor", "/custom-flows/mfa"],
-      ["OAuth Connections", "/custom-flows/oauth-connections"],
-      ["SAML Connections", "/custom-flows/saml-connections"],
-      ["Forgot Password", "/custom-flows/forgot-password"],
-      ["Sign out", "/custom-flows/sign-out"],
-      ["User Impersonation", "/custom-flows/user-impersonation"],
-      ["Invitations", "/custom-flows/invitations"],
-      ["Embedded Magic Links", "/custom-flows/embedded-magic-links"],
-      [
-        "Multi-session applications",
-        "/custom-flows/multi-session-applications"
-      ],
-      ["Error handling", "/custom-flows/error-handling"]
-    ]
-  ],
-  "---",
-  [
-    { "title": "Integrations", "icon": "puzzle", "root": "integrations" },
-    [
-      ["Overview", "/integrations/overview"],
-      ["Webhooks", "/integrations/webhooks"],
-      "# Databases",
-      ["Convex", "/integrations/databases/convex"],
-      ["Fauna", "/integrations/databases/fauna"],
-      ["Firebase", "/integrations/databases/firebase"],
-      ["Grafbase", "/integrations/databases/grafbase"],
-      ["Hasura", "/integrations/databases/hasura"],
-      ["Nhost", "/integrations/databases/nhost"],
-      ["Supabase", "/integrations/databases/supabase"],
-      "# Analytics",
-      ["Google Analytics", "/integrations/analytics/google-analytics"],
-      "# Webhooks",
-      ["Inngest", "/integrations/webhooks/inngest"]
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
     ]
   ],
   [
     {
-      "title": "Deployments & Migrations",
-      "icon": "rocket",
-      "root": "deployments"
+      "title": "Security at Clerk",
+      "root": "guides"
     },
     [
-      ["Instances / Environments", "/deployments/environments"],
-      "# Deployment",
-      ["Deploy to production", "/deployments/overview"],
-      ["Deploy to Vercel", "/deployments/deploy-to-vercel"],
-      ["Changing domains", "/deployments/changing-domains"],
-      "# Migrations",
-      ["Migrate to Clerk", "/deployments/migrate-overview"],
-      ["Migrate from Firebase", "/deployments/migrate-from-firebase"],
-      ["Exporting user data", "/deployments/exporting-users"]
-
-    ]
-  ],
-  [
-    { "title": "Testing", "icon": "beaker", "root": "testing" },
-    [
-      ["Overview", "/testing/overview"],
-      ["Test Emails and Phones", "/testing/test-emails-and-phones"],
-      "# Testing Frameworks",
-      ["Cypress", "/testing/cypress"],
-      ["Postman or Insomnia", "/testing/postman-or-insomnia"]
-    ]
-  ],
-  [
-    {
-      "title": "Advanced Usage",
-      "icon": "calculator",
-      "root": "advanced-usage"
-    },
-    [
-      ["Clerk as an OAuth2 Provider", "/advanced-usage/clerk-idp"],
-      ["Adding Satellite Domains", "/advanced-usage/satellite-domains"],
-      ["Proxying the Clerk Frontend API", "/advanced-usage/using-proxies"]
-    ]
-  ],
-  [
-    {
-      "title": "Troubleshooting",
-      "icon": "support",
-      "root": "troubleshooting"
-    },
-    [
-      ["Overview", "/troubleshooting/overview"],
-      ["Email Deliverability", "/troubleshooting/email-deliverability"],
-      ["Script Loading", "/troubleshooting/script-loading"],
-      "# Help & Support",
-      ["Create a minimal reproduction", "/troubleshooting/create-a-minimal-reproduction"],
-      ["Community Discord", "https://clerk.com/discord"],
-      ["Contact Support", "https://clerk.com/support"]
-    ]
-  ],
-  [
-    {
-      "title": "Upgrade Guides",
-      "icon": "arrow-circle-up",
-      "root": "upgrade-guides"
-    },
-    [
-      ["Long Term Support Policy", "/upgrade-guides/long-term-support"],
-      ["API Key Changes", "/upgrade-guides/api-keys"],
-      ["URL-based session syncing", "/upgrade-guides/url-based-session-syncing"],
-      ["Progressive Sign up", "/upgrade-guides/progressive-sign-up"],
-      "# Upgrade to V3",
-      ["Introduction", "/upgrade-guides/v3-introduction"],
-      ["Client-side changes", "/upgrade-guides/v3-client-side-changes"],
-      [
-        "Next.js server-side changes",
-        "/upgrade-guides/v3-nextjs-server-side-changes"
-      ],
-      [
-        "Express server-side changes",
-        "/upgrade-guides/v3-express-server-side-changes"
-      ]
-    ]
-  ],
-  [
-    {
-      "title": "Security",
-      "icon": "lock-closed",
-      "root": "security"
-    },
-    [
-      ["Overview", "/security/overview"],
-      [
-        "Vulnerability disclosure policy",
-        "/security/vulnerability-disclosure-policy"
-      ],
-      ["XSS leak protection", "/security/xss-leak-protection"],
-      ["CSRF protection", "/security/csrf-protection"],
-      ["Fixation protection", "/security/fixation-protection"],
-      ["Password protection and rules", "/security/password-protection"],
-      "# Protect accounts from attacks",
-      ["Brute force attacks and locking user accounts","/security/user-lock-guide"],
-      ["Customize max login attempts and duration of of user lockout", "/security/customize-user-lockout"],
-      ["Unlock accounts from the Clerk Dashboard", "/security/unlock-user-accounts"],
-      ["Programmatically lock and unlock accounts", "/security/programmatically-lock-user-accounts"]
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
     ]
   ],
   "# SDK References",
@@ -689,82 +383,28 @@
   ],
   [
     {
-      "title": "Redwood",
-      "icon": "redwood",
-      "root": "references/redwood",
-      "tag": "Community"
+      "title": "Community SDKs",
+      "icon": "book-open",
+      "root": "references/ruby"
     },
     [
-      ["Redwood", "https://redwoodjs.com/docs/auth/clerk"]
+      {
+        "title": "Redwood",
+        "icon": "redwood",
+        "root": "references/redwood",
+        "tag": "Community"
+      },
+      [
+        ["Redwood", "https://redwoodjs.com/docs/auth/clerk"]
+      ]
     ]
+    
   ],
-  [
-    {
-      "title": "Svelte",
-      "icon": "svelte",
-      "root": "references/svelte",
-      "tag": "Community"
-    },
-    [
-      ["Svelte", "https://github.com/markjaquith/clerk-sveltekit"]
-    ]
-  ],
-  [
-    {
-      "title": "Vue",
-      "icon": "vue",
-      "root": "references/vue",
-      "tag": "Community"
-    },
-    [
-      ["Vue", "https://vue-clerk.vercel.app/"]
-    ]
-  ],
-  [
-    {
-      "title": "Elysia",
-      "icon": "elysia",
-      "root": "references/elysia",
-      "tag": "Community"
-    },
-    [
-      ["Elysia", "https://github.com/wobsoriano/elysia-clerk"]
-    ]
-  ],
-  [
-    {
-      "title": "Rust",
-      "icon": "rust",
-      "root": "references/rust",
-      "tag": "Community"
-    },
-    [
-      ["Rust", "https://github.com/cincinnati-ventures/clerk-rs"]
-    ]
-  ],
-  [
-    {
-      "title": "Hono",
-      "icon": "hono",
-      "root": "references/hono",
-      "tag": "Community"
-    },
-    [
-      ["Hono", "https://github.com/honojs/middleware/tree/main/packages/clerk-auth"]
-    ]
-  ],
-  [
-    {
-      "title": "C#",
-      "icon": "csharp",
-      "root": "references/csharp",
-      "tag": "Community"
-    },
-    [
-      ["C#", "https://github.com/Hawxy/Clerk.Net"]
-    ]
-  ],
-  "# API References",
+ 
+  "# Reference",
+  
+  ["Backend API", "/reference/backend-api"],
+  ["Frontend API", "/reference/frontend-api/"],
   [
     { "title": "Backend SDK", "icon": "", "root": "/references/backend" },
     [
@@ -899,7 +539,5 @@
         [["createEmail()", "/references/backend/emails/create-email"]]
       ]
     ]
-  ],
-  ["Backend API", "/reference/backend-api"],
-  ["Frontend API", "/reference/frontend-api/"]
+  ]
 ]
