clean up getting started section

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -8,19 +8,19 @@
       "root": "quickstarts"
     },
     [
-      ["Overview", "/quickstarts/overview"],
-      ["Set up Clerk", "/quickstarts/setup-clerk"],
-      "# Full Stack",
-      ["Next.js", "/quickstarts/nextjs"],
-      ["Remix", "/quickstarts/remix"],
-      ["Gatsby", "/quickstarts/gatsby"],
-      ["RedwoodJS", "/quickstarts/redwood"],
-      "# Frontend",
-      ["JavaScript", "/quickstarts/javascript"],
-      ["React", "/quickstarts/react"],
-      ["Expo", "/quickstarts/expo"],
-      "# Backend",
-      ["Fastify", "/quickstarts/fastify"]
+      "# Featured",
+      ["Next.js Quickstart", "/quickstarts/nextjs"],
+      ["React (Vite) Quickstart", "/quickstarts/react"],
+      ["Remix Quickstart", "/quickstarts/remix"],
+      "# Other",
+      ["RedwoodJS Quickstart", "/quickstarts/redwood"],
+      ["Expo Quickstart", "/quickstarts/expo"],
+      ["Gatsby Quickstart", "/quickstarts/gatsby"],
+      ["Fastify Quickstart", "/quickstarts/fastify"],
+      ["JavaScript Quickstart", "/quickstarts/javascript"],
+      "# Advanced",
+      ["Project Templates", "#TODO"],
+      ["Request a Quickstart", "#TODO"]
     ]
   ],
   [
