stub in the API Reference content type / section

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -37,11 +37,13 @@
     {
       "title": "API Reference",
       "icon": "book-open",
-      "root": "guides"
+      "root": "references"
     },
     [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
-      
+      ["Overview", "/references/overview"],
+      "# Clerk APIs",
+      ["Backend API", "/reference/backend-api"],
+      ["Frontend API", "/reference/frontend-api/"]
     ]
   ],
   [
