add back component ref section as 'UI components'

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -49,12 +49,86 @@
   [
     {
       "title": "UI Components",
-      "icon": "book-open",
-      "root": "guides"
+      "icon": "rectangle-group",
+      "root": "components"
     },
     [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
-      
+      ["Overview", "/components/overview"],
+      ["<ClerkProvider>", "/components/clerk-provider"],
+      "# Authentication Components",
+      ["<SignIn />", "/components/authentication/sign-in"],
+      ["<SignUp />", "/components/authentication/sign-up"],
+
+      "# User Components",
+      ["<UserButton />", "/components/user/user-button"],
+      ["<UserProfile />", "/components/user/user-profile"],
+
+      "# Organization Components",
+      ["<CreateOrganization />", "/components/organization/create-organization"],
+      [
+        "<OrganizationProfile />",
+        "/components/organization/organization-profile"
+      ],
+      [
+        "<OrganizationSwitcher />",
+        "/components/organization/organization-switcher"
+      ],
+      [
+        "<OrganizationList />",
+        "/components/organization/organization-list"
+      ],
+
+      "# Customization",
+      [
+        { "title": "Appearance prop" },
+        [
+          ["Overview", "/components/customization/overview"],
+          ["Layout", "/components/customization/layout"],
+          ["Themes", "/components/customization/themes"],
+          ["Variables", "/components/customization/variables"]
+        ]
+      ],
+      ["Localization prop (i18n)", "/components/customization/localization"],
+      [
+        { "title": "Custom Pages" },
+        [
+          ["<UserProfile />", "/components/customization/user-profile"],
+          ["<OrganizationProfile />", "/components/customization/organization-profile"]
+        ]
+      ],
+      "# Control Components",
+      [
+        "<AuthenticateWithRedirectCallback />",
+        "/components/control/authenticate-with-callback"
+      ],
+      ["<ClerkLoaded>", "/components/control/clerk-loaded"],
+      ["<ClerkLoading>", "/components/control/clerk-loading"],
+      ["<Protect>", "/components/protect"],
+      ["<MultisessionAppSupport>", "/components/control/multi-session"],
+      ["<RedirectToSignIn />", "/components/control/redirect-to-signin"],
+      ["<RedirectToSignUp />", "/components/control/redirect-to-signup"],
+      [
+        "<RedirectToUserProfile />",
+        "/components/control/redirect-to-userprofile"
+      ],
+      [
+        "<RedirectToOrganizationProfile />",
+        "/components/control/redirect-to-organizationprofile"
+      ],
+      [
+        "<RedirectToCreateOrganization />",
+        "/components/control/redirect-to-createorganization"
+      ],
+      ["<SignedIn>", "/components/control/signed-in"],
+      ["<SignedOut>", "/components/control/signed-out"],
+      "# Unstyled Components",
+      ["<SignInButton>", "/components/unstyled/sign-in-button"],
+      [
+        "<SignInWithMetamaskButton>",
+        "/components/unstyled/sign-in-with-metamask"
+      ],
+      ["<SignUpButton>", "/components/unstyled/sign-up-button"],
+      ["<SignOutButton>", "/components/unstyled/sign-out-button"]
     ]
   ],
   "---",
