stub in the "core concepts" section

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -133,60 +133,14 @@
   ],
   "---",
   "# Core Concepts",
-  [
-    {
-      "title": "Integrating Clerk",
-      "root": "guides"
-    },
-    [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
-    ]
-  ],
-  [
-    {
-      "title": "Users",
-      "root": "guides"
-    },
-    [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
-    ]
-  ],
-  [
-    {
-      "title": "Organizations",
-      "root": "guides"
-    },
-    [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
-    ]
-  ],
-  [
-    {
-      "title": "Session Management",
-      "root": "guides"
-    },
-    [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
-    ]
-  ],
-  [
-    {
-      "title": "Client Handshake",
-      "root": "guides"
-    },
-    [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
-    ]
-  ],
-  [
-    {
-      "title": "Security at Clerk",
-      "root": "guides"
-    },
-    [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
-    ]
-  ],
+  ["Integrating Clerk", "/core-concepts/integrating-clerk"],
+  ["Users", "/core-concepts/users"],
+  ["Organizations", "/core-concepts/organizations"],
+  ["Session Management", "/core-concepts/session-management"],
+  ["Client Handshake", "/core-concepts/client-handshake"],
+  ["Security at Clerk", "/core-concepts/security-at-clerk"],
+  ["System Limits", "/core-concepts/system-limits"],
+
   "# SDK References",
   [
     { "title": "Next.js", "icon": "nextjs", "root": "references/nextjs" },
